# illuminate

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  travis.yml
assets/: Box.gltf  cat.gltf  cube.gltf  untitled.gltf
engine/: Cargo.toml
engine/examples/: boxes.rs  boxes_cpu.rs  cpurender.rs  flycam.rs  flyfpscam.rs  topdowncam.rs
engine/src/: renderer.rs  resources.rs  window.rs
engine/src/renderer/: core.rs  cpu.rs  shaders.rs
engine/src/renderer/core/: command.rs  pipeline.rs
engine/src/renderer/pathtracer/: aabb_calculator.rs  ray_triangle_intersector.rs
engine/src/renderer/shaders/: calculate_aabbs.comp
examples/: boxes.rs  boxes_cpu.rs  collision.rs  command_parsing.rs  flagged_storage.rs  flycam.rs  flyfpscam.rs  gltf.rs  message_processing.rs  raytracer.rs  topdowncam.rs  triangle.rs  triangle2.rs
game/: Cargo.toml
game/src/: main.rs
shaders/: accumulate_intersections.comp  bounces.comp  calculate_aabbs.comp  camera_rays.comp  generate_camera_rays.comp  raytracer.comp  transfer_vertices.comp  triangle_intersection.comp  vertex_skinning.comp
src/: asset.rs  components.rs  gameplay.rs  input.rs  lib.rs  main.rs  renderer.rs  scene.rs  systems.rs  window.rs
src/asset/: camera.rs  error.rs  importer.rs  material.rs  mesh.rs  node.rs  primitive.rs  root.rs  scene.rs  texture.rs
src/components/: mod.rs  spaceship.rs
src/network/: client.rs  message.rs  messages.rs  mod.rs  netsys.rs  rpc.rs  server.rs
src/physics/: command_allocation.rs
src/renderer/: accumulator.rs  backend.rs  basic.rs  basic_pathtracer.rs  buffer.rs  camera_ray_generator.rs  camera_rays.rs  core.rs  cpu.rs  descriptor.rs  device.rs  fast_renderer.rs  flat_renderer.rs  framebuffer.rs  mesh.rs  pathtracer.rs  pipeline.rs  ray_triangle_intersector.rs  scene.rs  staged.rs  staged_pathtracer.rs  swapchain.rs  types.rs  uniform.rs  window.rs
src/renderer/core/: backend.rs  buffer.rs  command.rs  descriptor.rs  device.rs  framebuffer.rs  pipeline.rs  swapchain.rs
src/renderer/pathtracer/: aabb_calculator.rs  accumulator.rs  camera_ray_generator.rs  ray_triangle_intersector.rs  types.rs  vertex_skinner.rs
src/renderer/shaders/: triangle_intersection.comp
src/renderer/staged_pathtracer/: ray_triangle_intersector.rs  types.rs
src/scene/: camera.rs  light.rs  mesh.rs
src/systems/: FpsMovement.rs  SceneBuilder.rs  mod.rs  player_movement.rs  scene_builder.rs
src/world/: dispatcher.rs  message.rs  mod.rs  state.rs
tests/: cli.rs
