[package]
name = "blackhole"
version = "0.1.0"
publish = false
#workspace = ".."
edition = "2018"

#[features]
#default = []
#metal = ["gfx-backend-metal"]
#gl = ["gfx-backend-gl"]
#dx11 = ["gfx-backend-dx11"]
#dx12 = ["gfx-backend-dx12"]
#vulkan = ["gfx-backend-vulkan"]
#unstable = []

[dependencies]
nalgebra-glm = "0.1"
collision = "0.20.1"
base64 = "0.10.1"
cgmath = "0.17.0"
env_logger = "0.6"
image = "0.21"
log = "0.4"
winit = "0.19"
#gilrs = "0.7.1"
gl = "0.12.0"
gltf = "0.12.0"
glsl-to-spirv = "0.1.4"
gfx-hal = "0.2.0"
gfx-backend-vulkan = "0.2.0"
bitflags = "1.0.4"
num-traits = "0.2.6"
#amethyst_gltf = "0.5"

err-derive = "0.1"
amethyst_assets = "0.6"

[dependencies.amethyst_error]
git = "https://github.com/amethyst/amethyst.git"
branch = "master"


#
#[dependencies.gfx-backend-gl]
#git = "https://github.com/rishflab/gfx.git"
#branch = "raytracer"
##path = "../src/backend/gl"
##version = "0.1"
#features = ["glutin"]
#optional = true
#
#[dependencies.gfx-backend-vulkan]
##path = "../src/backend/vulkan"
#git = "https://github.com/rishflab/gfx.git"
#branch = "raytracer"
##version = "0.1"
##features = ["glsl-to-spirv"]
#optional = true
#
#[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
#git = "https://github.com/rishflab/gfx.git"
#branch = "raytracer"
##path = "../src/backend/metal"
##version = "0.1"
#optional = true
#
#[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
#git = "https://github.com/rishflab/gfx.git"
#branch = "raytracer"
##path = "../src/backend/dx11"
##version = "0.1"
#optional = true
#
#[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
#git = "https://github.com/rishflab/gfx.git"
#branch = "raytracer"
##path = "../src/backend/dx12"
##version = "0.1"
#optional = true
