[package]
name = "not-mechanical-engine"
authors = ["rishflab <rishflab@hotmail.com>"]
repository = "https://github.com/rishflab/not-mechanical-engine"
version = "0.1.0"
publish = false
edition = "2018"
keywords = ["graphics", "game", "engine", "pathtracing", "raytracing"]
categories = ["game-engines"]
description = "Realtime GPU pathtracing ECS based game engine"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.3"
env_logger = "0.6"
image = "0.21"
log = "0.4"
winit = "0.20.0-alpha4"
gltf = "0.12"
glsl-to-spirv = "0.1"
gfx-hal = "0.4"
gfx-backend-vulkan = "0.4"
byteorder = "1.3"
specs = "0.15"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3.0"
